# i2c-uart

./: .gitignore  CMakeLists.txt  README.md
cmake/: avrdude.cmake
src/: CMakeLists.txt  app-config.h  app-i2c.c  app-i2c.h  app-io.c  app-io.h  app-led.c  app-led.h  app-uart.c  app-uart.h  main.c
